# echeck

./: .editorconfig  .gitignore  CMakeLists.txt  Localization.cmake  README.txt  echeck-x64.nsi  echeck.c  echeck.nsi  echeck.vcxproj  tests.c  update-locale.sh  vcpkg.json
.github/workflows/: bullseye_amd64.yml  mail.yml  main.yml  packages.yml  release.yml
debian/: changelog  control  rules
debian/source/: options
e2/de/: buildings.txt  commands.txt  directions.txt  herbs.txt  items.txt  messages.txt  options.txt  parameters.txt  potions.txt  races.txt  ships.txt  skills.txt  spells.txt
e2/en/: messages.txt  ships.txt
e3/de/: messages.txt
e3/en/: messages.txt
locale/de/LC_MESSAGES/: echeck.mo
po/: echeck.de.po  echeck.pot
s/: build
tests/: good-orders.txt
